Fix PostListItem title truncation

--- a/src/components/PostListItem.scss
+++ b/src/components/PostListItem.scss
@@ -30,13 +30,14 @@
     }
     .header-right {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       align-items: center;
       margin-right: 0.5rem;
+      // border: 1px solid white;
+      width: 4rem;
     }
     .bookmark {
       margin-left: 0.5rem;
-      margin-right: 5px;
     }
     .title {
       font-weight: 700;
